# 05-chat

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  test.rest
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/tests/: chat.rs
migrations/: 20240601024902_initial.sql  20240617122043_workspace.sql  20240622005536_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  notifi.rs  sse.rs
src/: main.rs
src/handlers/: auth.rs  chat.rs
