[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
rstest = "0.20.0"

[dev-dependencies]
# sqlx-db-tester = { workspace = true } workspace 不支持 dev-dependencies，所以只能单独引入到crate中
sqlx-db-tester = "0.4.2"
