[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
# jwt-simple 设计比jwtwebtoken更好(不易出错) 把default-features去掉, 因为默认里面boring是Cpp写的, 编译很慢
jwt-simple = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum-extra = { workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.4"

[dev-dependencies]
http-body-util = "0.1.1"
# sqlx-db-tester = { workspace = true } workspace 不支持 dev-dependencies，所以只能单独引入到crate中
sqlx-db-tester = "0.4.2"
