[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3"
tokio-stream = "0.1"
